# wellbex-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  env.example  pyproject.toml
api/: exceptions.py  filters.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
api/management/commands/: create_cars.py  load_locations.py  update_locations_task.py
api/migrations/: 0001_initial.py  0002_alter_goods_description.py  0003_alter_location_zip_code.py
core/: settings.py  urls.py
infra/backend/: Dockerfile  docker-entrypoint.sh
infra/celery/beat/: Dockerfile
infra/celery/worker/: Dockerfile
locations/: .~lock.uszips.csv#
